--- a/src/RainWPF/Themes/Generic.xaml
+++ b/src/RainWPF/Themes/Generic.xaml
@@ -10,7 +10,6 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
-
     </ResourceDictionary.MergedDictionaries>
 
     <cv:Status2ColorConverter x:Key="Status2ColorConverter" />
@@ -69,5 +68,18 @@
         </Setter>
 
 
+    </Style>
+
+    <Style TargetType="{x:Type cc:Carrier}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type cc:Carrier}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
